--- a/WebVisualizations/Visualization2.html
+++ b/WebVisualizations/Visualization2.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#" style="background-color:rgb(16, 194, 134);">Latitude</a>
+        <a class="navbar-brand" href="Index.html" style="background-color:rgb(16, 194, 134);">Latitude Home</a>
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,20 +59,14 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-8" style="background-color:white">
-        <h2 style="color: rgb(16, 194, 134); font: bold;">Summary: Latitude vs. X</h2>
+        <h2 style="color: rgb(16, 194, 134); font: bold;">Humidity</h2>
        <hr>
-        <img src="Resources/TempVsLat.png" alt="Temperature vs. Latitude" style="float:left;width:200px;height:200px;">
+        <img src="Resources/HumidityVsLat.png" alt="Humidity vs. Latitude" style="float:center;width:700px;height:500px;">
         <br>
-        <p style="font-size: large;">The purpose of this project was to analyze how weather changes as you get closer to the equator.
-          To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 
-          500 cities
+        <br>
+        <p style="font-size: large;">As expected, the weather becomes significantly warmer as one approaches the equator.
         </p>
         <br>
-        <p style="font-size: large;">After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.
-          Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides
-          the source data and visualizations created as part of the analysis, as well as explanations and descriptions
-          of any trends and correlations witnessed.
-        </p>
         <hr>
         <br>
         <br>
@@ -81,10 +75,10 @@
         <h2 style="color: rgb(16, 194, 134); font: bold;">Visualizations</h2>
         <hr>
         <a href="Visualization1.html">
-          <img src="Resources/TempVsLat.png" class="rounded mx-auto d-block" alt="Temperature vs. Latitude"     style="float:left;width:150px;height:150px;">
+           <img src="Resources/TempVsLat.png" alt="Temperature vs. Latitude" style="float:left;width:150px;height:150px;">
         </a>
         <a href="Visualization2.html">
-          <img src="Resources/HumidityVsLat.png" class="rounded mx-auto d-block" alt="Humidity vs. Latitude" style="float:left;width:150px;height:150px;">
+          <img src="Resources/HumiditySelected.png" alt="Humidity vs. Latitude" style="float:left;width:150px;height:150px;">
         </a>
         <a href="Visualization3.html">
           <img src="Resources/CloudVsLat.png" alt="Cloudiness vs. Latitude" style="float:left;width:150px;height:150px;">
