final homework lol

--- a/WebVisualizations/Visualization3.html
+++ b/WebVisualizations/Visualization3.html
@@ -64,7 +64,7 @@
         <img src="Resources/CloudVsLat.png" alt="Cloudiness vs. Latitude" style="float:center;width:700px;height:500px;">
         <br>
         <br>
-        <p style="font-size: large;">As expected, the weather becomes significantly warmer as one approaches the equator.
+        <p style="font-size: large;">There is no correlation between Cloudiness and latitude.
         </p>
         <br>
         <hr>
