--- a/WebVisualizations/Visualization2.html
+++ b/WebVisualizations/Visualization2.html
@@ -64,7 +64,7 @@
         <img src="Resources/HumidityVsLat.png" alt="Humidity vs. Latitude" style="float:center;width:700px;height:500px;">
         <br>
         <br>
-        <p style="font-size: large;">As expected, the weather becomes significantly warmer as one approaches the equator.
+        <p style="font-size: large;">There is no correlation between Humidity and latitude.
         </p>
         <br>
         <hr>
