--- a/WebVisualizations/Data.html
+++ b/WebVisualizations/Data.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="Index.html" style="background-color:rgb(16, 194, 134);">Latitude Home</a>
+        <a class="navbar-brand" href="index.html" style="background-color:rgb(16, 194, 134);">Latitude Home</a>
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
